--- a/app/src/main/res/drawable/shape_rounded_green.xml
+++ b/app/src/main/res/drawable/shape_rounded_green.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="20dp" />
-    <solid android:color="@color/green_500" />
+    <solid android:color="@color/colorAccent" />
 </shape>
